--- a/.github/workflows/update_java_file_count.yml
+++ b/.github/workflows/update_java_file_count.yml
@@ -1,4 +1,4 @@
-name: Update Java File Count
+name: Update File Counts
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - main  # Replace 'main' with the default branch of your repository
 
 jobs:
-  update_count:
+  update_counts:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,13 +15,16 @@ jobs:
 
       - name: Count Java files
         run: |
-          java_files=$(find . -name '*.java' | wc -l)
-          echo "Java Files: $java_files"
-          sed -i "s/<!-- JAVA_FILE_COUNT -->/Java Files: $java_files/" README.md
+          java_files=$(find . -type f -name '*.java' | wc -l)
+          echo "Java Files: $java_files" > java_files_badge.md
 
-      - name: Commit file count update
+
+      # Add more steps for other file types and directories if needed
+
+      - name: Commit and Push badge updates
         run: |
-          git config user.name "Prasanna Muppidwar"
-          git config user.email "mprasanna5557@gmail.com"
-          git commit -am "Update Java file count [skip ci]"
+          git config user.name "Your GitHub Username"
+          git config user.email "your.email@example.com"
+          git add java_files_badge.md python_files_badge.md js_files_badge.md
+          git commit -m "Update file counts badges [skip ci]"
           git push
