--- a/.github/workflows/update_java_file_count.yml
+++ b/.github/workflows/update_java_file_count.yml
@@ -14,16 +14,27 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Count Java files
-  run: |
-    java_files=$(find . -type f -name '*.java' | wc -l)
-    sed -i "s/Java Files: [0-9]*/Java Files: $java_files/" README.md
+        id: count_java_files
+        run: |
+          java_files=$(find . -type f -name '*.java' | wc -l)
+          echo "Java Files: $java_files" > java_files_badge.md
 
-      # Add more steps for other file types and directories if needed
+      - name: Update README.md
+        run: |
+          python - <<EOF
+with open('README.md', 'r') as f:
+    content = f.read()
+    with open('java_files_badge.md', 'r') as badge_file:
+        badge_content = badge_file.read()
+    updated_content = content.replace('![Java Files](java_files_badge.md)', badge_content)
+with open('README.md', 'w') as f:
+    f.write(updated_content)
+EOF
 
-      - name: Commit and Push badge updates
+      - name: Commit and Push badge update
         run: |
           git config user.name "Your GitHub Username"
           git config user.email "your.email@example.com"
-          git add java_files_badge.md python_files_badge.md js_files_badge.md
-          git commit -m "Update file counts badges [skip ci]"
+          git add README.md
+          git commit -m "Update Java file count badge [skip ci]"
           git push
