--- a/.github/workflows/update_java_file_count.yml
+++ b/.github/workflows/update_java_file_count.yml
@@ -17,19 +17,12 @@ jobs:
         id: count_java_files
         run: |
           java_files=$(find . -type f -name '*.java' | wc -l)
-          echo "Java Files: $java_files" > java_files_badge.md
+          echo '{"java_files":' $java_files '}' > java_file_count.json
 
       - name: Update README.md
         run: |
-          python - <<EOF
-with open('README.md', 'r') as f:
-    content = f.read()
-    with open('java_files_badge.md', 'r') as badge_file:
-        badge_content = badge_file.read()
-    updated_content = content.replace('![Java Files](java_files_badge.md)', badge_content)
-with open('README.md', 'w') as f:
-    f.write(updated_content)
-EOF
+          echo "![Java Files](https://img.shields.io/badge/dynamic/json?color=blue&label=Java%20Files&query=java_files&url=https://raw.githubusercontent.com/${{ github.repository }}/main/java_file_count.json)" > README.md.new
+          mv README.md.new README.md
 
       - name: Commit and Push badge update
         run: |
